--- a/main/main.html
+++ b/main/main.html
@@ -192,7 +192,64 @@
 <button class="btn __top"></button>
 
 <!-- mobile nav -->
-
+<aside class="side_nav" id="mobileMenu">
+    <div class="side_header">
+        <p class="tit">안녕하세요, 한우리입니다.</p>
+		
+        <ul class="quick_menu_list"><!-- login 전 -->
+            <li><a href="#a"><span>로그인</span></a></li>
+            <li><a href="#a"><span>회원가입</span></a></li>
+            <li><a href="#a"><span>아이디/비번찾기</span></a></li>
+        </ul>
+    </div>
+    <nav>
+        <ul class="snb_list">
+            <li>
+                <strong class="t1">내정보</strong>
+                <div>
+                    <a href="#a">도서주문내역</a>
+                    <a href="#a">접수확인</a>
+                    <a href="#a">응시표</a>
+                    <a href="#a">시험환불</a>
+                </div>
+            </li>
+            <li>
+                <strong class="t1">대회안내</strong>
+                <div>
+                    <a href="#a">대회개요</a>
+                    <a href="#a">유의사항</a>
+                    <a href="#a">예시문제</a>
+                </div>
+            </li>
+            <li>
+                <a href="#a" class="t1">도서구입</a>
+            </li>
+            <li>
+                <a href="#a" class="t1">시험접수</a>
+            </li>
+            <li>
+                <a href="#a" class="t1">결과발표</a>
+            </li>
+            <li>
+                <strong class="t1">고객센터</strong>
+                <div>
+                    <a href="#a">공지사항</a>
+                    <a href="#a">자주묻는질문</a>
+                </div>
+            </li>
+            <li>
+                <strong>한우리소개</strong>
+                <div>
+                    <a href="#a">인사말</a>
+                    <a href="#a">설립목적</a>
+                    <a href="#a">연혁</a>
+                    <a href="#a">위치안내</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+    <buton id="btnClosed" class="btn __closed"></buton>
+</aside>
 <!--// mobile nav -->
 <script defer src="../assets/js/jquery-3.4.1.min.js"></script>
 <script defer src="../assets/libs/swiper.min.js"></script>
