--- a/main/main.html
+++ b/main/main.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="tamtam">
+    <meta property="og:title" content="한우리 독서올림피아드">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
