--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>메인</td>
 					<td>-</td>
 					<td><a href="main/main.html" target="_blank">main/main.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-06</td>
 					<td class="ac"></td>
 				</tr>
 				<!-- 대회안내 -->
