모바일 회원정보

--- a/work.html
+++ b/work.html
@@ -93,28 +93,28 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>회원정보</td>
 					<td>로그인</td>
 					<td><a href="member/login.html" target="_blank">member/login.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-08</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m03">
 					<td></td>
 					<td>회원가입</td>
 					<td><a href="member/create.html" target="_blank">member/create.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-08</td>
 					<td class="ac"></td>
 				</tr>+
 				<tr class="m03">
 					<td></td>
 					<td>아이디찾기</td>
 					<td><a href="member/findid.html" target="_blank">member/findid.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-08</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m03">
 					<td></td>
 					<td>비밀번호찾기</td>
 					<td><a href="member/findpw.html" target="_blank">member/findpw.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-08</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m03">
