--- a/main/main.html
+++ b/main/main.html
@@ -81,7 +81,7 @@
         </section>
 
         <section class="cont1">
-            <h2><img src="../assets/img/img_txt_main_01.svg" alt="독서올림피아드란?"></h2>
+            <h2 class="h2">독서올림피아드란?</h2>
             <p>어린이와 청소년의 독서논술 능력 향상을 위한 <br class="m_br">전국 최대 규모의 독서 능력 경시대회입니다.</p>
             <p>영역별 독서 능력을 객관적으로 평가하여 <br class="m_br">효과적인 독서 방법을 제시합니다.</p>
             <p class="img">
@@ -90,7 +90,7 @@
         </section>
 
         <section class="cont2">
-            <h2><img src="../assets/img/img_txt_main_02.svg" alt="독서올림파이드 선택 아닌 필수인 이유"></h2>
+            <h2 class="h2">독서올림피아드 <br class="m_br">선택 아닌 필수인 이유</h2>
             <dl>
                 <div>
                     <dt>독서력·사고력 향상</dt>
@@ -112,7 +112,7 @@
         </section>
 
         <section class="cont3">
-            <h2><img src="../assets/img/img_txt_main_03.svg" alt="2022년 대회 개요"></h2>
+            <h2 class="h2">2022년 대회 개요</h2>
             <p class="tit">초등학생 4권, 중학생 3권의 필독서에서 출제</p>
             <p class="tit">필독서 구입 시 참가비 2,000원 할인쿠폰 제공</p>
             <dl>
@@ -159,7 +159,7 @@
 
         <section class="cont4">
             <p>독서 능력 점검하고 <br>성취감과 자신감 키우는</p>
-            <h2><img src="../assets/img/img_txt_main_04.svg" alt="한우리 독서올림피아드"></h2>
+            <h2 class="h2">한우리 <br class="m_br">독서올림피아드</h2>
             <p class="img"><img src="../assets/img/img_main_cont2.svg" alt=""></p>
             <a href="#a" class="btn_main puple">
                 <span>시험접수하기</span>
