--- a/main/main.html
+++ b/main/main.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header class="header">
         <section class="inner __top">
-            <button id="btnMobile" class="m btn _menu"></button>
+            <button id="btnMobile" class="btn _menu"></button>
             <h1 class="logo">
                 <a href="#a"><img src="../assets/img/logo.svg" alt="한우리 독서올림피아드"></a>
             </h1>
@@ -49,6 +49,22 @@
                 <li>
                     <a href="#a">결과발표</a>
                 </li>
+                <li class="pc">
+                    <a href="#a">고객센터</a>
+                    <div class="sub_nav">
+                        <a href="#a">공지사항</a>
+                        <a href="#a">자주묻는 질문</a>
+                    </div>
+                </li>
+                <li class="pc">
+                    <a href="#a">한우리소개</a>
+                    <div class="sub_nav">
+                        <a href="#a">인사말</a>
+                        <a href="#a">설립목적</a>
+                        <a href="#a">연혁</a>
+                        <a href="#a">위치안내</a>
+                    </div>
+                </li>
                 <li>
                     <a href="#a">내정보</a>
                     <div class="sub_nav">
@@ -59,7 +75,8 @@
                         <a href="#a">결과</a>
                     </div>
                 </li>
-            </ul>      
+            </ul>
+            <div class="sub_bg"></div>
         </section>
     </nav>
     
@@ -67,13 +84,16 @@
         <section class="main_cont">
             <div class="swiper-container main_banner">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" style="background-color: #CDD0C1;">
                         <img srcset="../assets/img/img_main_banner_01@2x.png 2x,
-                        ../assets/img/img_main_banner_01@3x.png 3x" src="../assets/img/img_main_banner_01@2x.png" alt="" >
+                        ../assets/img/img_main_banner_01@3x.png 3x" src="../assets/img/img_main_banner_01@2x.png" alt="" class="m">
+                        <img src="../assets/img/img_main_banner_01_pc.png" alt="" class="pc">
+                        <a href="#a" class="pc_f"><span>대회 일정 보기</span></a>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" style="background-color: #713BB9;">
                         <img srcset="../assets/img/img_main_banner_02@2x.png 2x,
-                        ../assets/img/img_main_banner_02@3x.png 3x" src="../assets/img/img_main_banner_02@2x.png" alt="" >
+                        ../assets/img/img_main_banner_02@3x.png 3x" src="../assets/img/img_main_banner_02@2x.png" alt="" class="m">
+                        <img src="../assets/img/img_main_banner_02_pc.png" alt="" class="pc">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -81,89 +101,99 @@
         </section>
 
         <section class="cont1">
-            <h2 class="h2">독서올림피아드란?</h2>
-            <p>어린이와 청소년의 독서논술 능력 향상을 위한 <br class="m_br">전국 최대 규모의 독서 능력 경시대회입니다.</p>
-            <p>영역별 독서 능력을 객관적으로 평가하여 <br class="m_br">효과적인 독서 방법을 제시합니다.</p>
-            <p class="img">
-                <img src="../assets/img/img_main_cont1.svg" alt="독서 능력 평가">
-            </p>
+            <div class="inner">
+                <h2 class="h2">독서올림피아드란?</h2>
+                <p>어린이와 청소년의 독서논술 능력 향상을 위한 <br>전국 최대 규모의 독서 능력 경시대회입니다.</p>
+                <p>영역별 독서 능력을 객관적으로 평가하여 <br>효과적인 독서 방법을 제시합니다.</p>
+                <p class="img">
+                    <img src="../assets/img/img_main_cont1.svg" alt="독서 능력 평가">
+                </p>
+            </div>
         </section>
 
         <section class="cont2">
-            <h2 class="h2">독서올림피아드 <br class="m_br">선택 아닌 필수인 이유</h2>
-            <dl>
-                <div>
-                    <dt>독서력·사고력 향상</dt>
-                    <dd>대회 준비와 참여 과정을 통해 <br class="m_br">독서력과 사고력이 향상돼요</dd>
-                </div>
-                <div>
-                    <dt>필독서 깊이 읽기</dt>
-                    <dd>엄선된 필독서를 정독하며 <br class="m_br">방학을 알차게 보낼 수 있어요</dd>
-                </div>
-                <div>
-                    <dt>진단·분석 리포트</dt>
-                    <dd>영역별 진단 결과와 개선법을 <br class="m_br">분석한 리포트를 제공해요</dd>
-                </div>
-                <div>
-                    <dt>성취감·자신감</dt>
-                    <dd>최대 규모의 독서 대회 참가로 <br class="m_br">남다른 성취감을 경험하세요</dd>
-                </div>
-            </dl>
+            <div class="inner">
+                <h2 class="h2">독서올림피아드 <br>선택 아닌 필수인 이유</h2>
+                <dl>
+                    <div>
+                        <dt>독서력·사고력 향상</dt>
+                        <dd>대회 준비와 참여 과정을 통해 <br>독서력과 사고력이 향상돼요</dd>
+                    </div>
+                    <div>
+                        <dt>필독서 깊이 읽기</dt>
+                        <dd>엄선된 필독서를 정독하며 <br>방학을 알차게 보낼 수 있어요</dd>
+                    </div>
+                    <div>
+                        <dt>진단·분석 리포트</dt>
+                        <dd>영역별 진단 결과와 개선법을 <br>분석한 리포트를 제공해요</dd>
+                    </div>
+                    <div>
+                        <dt>성취감·자신감</dt>
+                        <dd>최대 규모의 독서 대회 참가로 <br>남다른 성취감을 경험하세요</dd>
+                    </div>
+                </dl>
+            </div>
         </section>
 
         <section class="cont3">
-            <h2 class="h2">2022년 대회 개요</h2>
-            <p class="tit">초등학생 4권, 중학생 3권의 필독서에서 출제</p>
-            <p class="tit">필독서 구입 시 참가비 2,000원 할인쿠폰 제공</p>
-            <dl>
-                <div>
-                    <dt>시험 기반</dt>
-                    <dd>온라인 시험</dd>
-                </div>
-                <div>
-                    <dt>시험 유형</dt>
-                    <dd>객관식 5지선다형, 60분</dd>
-                </div>
-                <div>
-                    <dt>참가 부문</dt>
-                    <dd>초등학생부(학년별), 중학생부</dd>
-                </div>
-                <div>
-                    <dt>접수 기간</dt>
-                    <dd>6.13(월) ~ 7.15(금)</dd>
-                </div>
-                <div>
-                    <dt><span>시</span><span>험</span><span>일</span></dt>
-                    <dd>8.20(토)</dd>
-                </div>
-                <div>
-                    <dt>결과 발표</dt>
-                    <dd>9.14(수)</dd>
-                </div>
-                <div>
-                    <dt><span>참</span><span>가</span><span>비</span></dt>
-                    <dd>12,000원</dd>
-                </div>
-                <div>
-                    <dt>시상 내역</dt>
-                    <dd>부문별 우수자 상장 및 부상 제공</dd>
-                </div>
-            </dl>
-            <a href="#a" class="btn_main">
-                <span>대회 개요 더보기</span>
-            </a>
-            <a href="#a" class="btn_main">
-                <span>필독서 확인·구입</span>
-            </a>
+            <div class="inner">
+                <h2 class="h2">2022년 대회 개요</h2>
+                <p class="tit">초등학생 4권, 중학생 3권의 필독서에서 출제</p>
+                <p class="tit">필독서 구입 시 참가비 2,000원 할인쿠폰 제공</p>
+                <dl>
+                    <div>
+                        <dt>시험 기반</dt>
+                        <dd>온라인 시험</dd>
+                    </div>
+                    <div>
+                        <dt>시험 유형</dt>
+                        <dd>객관식 5지선다형, 60분</dd>
+                    </div>
+                    <div>
+                        <dt>참가 부문</dt>
+                        <dd>초등학생부(학년별), 중학생부</dd>
+                    </div>
+                    <div>
+                        <dt>접수 기간</dt>
+                        <dd>6.13(월) ~ 7.15(금)</dd>
+                    </div>
+                    <div>
+                        <dt><span>시</span><span>험</span><span>일</span></dt>
+                        <dd>8.20(토)</dd>
+                    </div>
+                    <div>
+                        <dt>결과 발표</dt>
+                        <dd>9.14(수)</dd>
+                    </div>
+                    <div>
+                        <dt><span>참</span><span>가</span><span>비</span></dt>
+                        <dd>12,000원</dd>
+                    </div>
+                    <div>
+                        <dt>시상 내역</dt>
+                        <dd>부문별 우수자 상장 및 부상 제공</dd>
+                    </div>
+                </dl>
+                <a href="#a" class="btn_main">
+                    <span>대회 개요 더보기</span>
+                </a>
+                <a href="#a" class="btn_main">
+                    <span>필독서 확인·구입</span>
+                </a>
+            </div>
         </section>
 
         <section class="cont4">
-            <p>독서 능력 점검하고 <br>성취감과 자신감 키우는</p>
-            <h2 class="h2">한우리 <br class="m_br">독서올림피아드</h2>
-            <p class="img"><img src="../assets/img/img_main_cont2.svg" alt=""></p>
-            <a href="#a" class="btn_main puple">
-                <span>시험접수하기</span>
-            </a>
+            <div class="inner">
+                <p>독서 능력 점검하고 <br>성취감과 자신감 키우는</p>
+                <h2 class="h2">한우리 <br>독서올림피아드</h2>
+                <p class="img">
+                    <img srcset="../assets/img/img_main_cont2@2x.png 2x, ../assets/img/img_main_cont2@3x.png 3x" src="../assets/img/img_main_cont2.png" alt="">
+                </p>
+                <a href="#a" class="btn_main puple">
+                    <span>시험접수하기</span>
+                </a>
+            </div>
         </section>
     </main>
     
@@ -174,24 +204,31 @@
     <!-- footer -->
     <footer class="footer">
         <section class="inner">
-            <div class="link_list">
-                <a href="#a">개인정보취급방침</a>
-                <a href="#a">이용약관</a>
-                <a href="#a">회사소개</a>
+            <h2 class="logo"><img src="../assets/img/logo_foot.svg" alt="한우리 독서문화운동본부"></h2>
+            <div class="foot_cont">
+                <div class="link_list">
+                    <a href="#a">개인정보취급방침</a>
+                    <a href="#a">이용약관</a>
+                    <a href="#a">회사소개</a>
+                </div>
+                <p class="address">
+                    07261 서울시 영등포구 당산로27길 16 한우리빌딩 2층 <br class="m">
+                    대표 김희선  /  사업자등록 220-82-00385  /  02-6276-2604
+                </p>
+                <p class="copyright">@ (사)한우리독서문화운동본부</p>
             </div>
-            <p class="address">
-                07261 서울시 영등포구 당산로27길 16 한우리빌딩 2층 <br class="m_br">
-                대표 김희선  /  사업자등록 220-82-00385  /  02-6276-2604
-            </p>
-            <p class="copyright">@ (사)한우리독서문화운동본부</p>
         </section>        
     </footer>
     <!--// footer -->
 </div>
 
-<button class="btn __top"></button>
+<button class="m btn __top"></button>
+<div class="pc side_banner">
+    <a href="#a"><img src="../assets/img/pc_floating_banner.png" alt="독서올림피아드 시험접수"></a>
+    <a href="#a" class="__top"><img src="../assets/img/pc_btn_top.png" alt="페이지 상단 보기"></a>
+</div>
 
-<!-- mobile nav -->
+<!-- side nav -->
 <aside class="side_nav" id="mobileMenu">
     <div class="side_header">
         <p class="tit">안녕하세요, 한우리입니다.</p>
@@ -238,7 +275,7 @@
                 </div>
             </li>
             <li>
-                <strong>한우리소개</strong>
+                <strong class="t1">한우리소개</strong>
                 <div>
                     <a href="#a">인사말</a>
                     <a href="#a">설립목적</a>
@@ -246,11 +283,20 @@
                     <a href="#a">위치안내</a>
                 </div>
             </li>
+            <li class="pc_f">
+                <strong class="t1">회원정보</strong>
+                <div>
+                    <a href="#a">로그인</a>
+                    <a href="#a">회원가입</a>
+                    <a href="#a">아이디 찾기</a>
+                    <a href="#a">비밀번호 찾기</a>
+                </div>
+            </li>
         </ul>
     </nav>
-    <buton id="btnClosed" class="btn __closed"></buton>
+    <button id="btnClosed" class="btn __closed"></button>
 </aside>
-<!--// mobile nav -->
+<!--// side nav -->
 <script defer src="../assets/js/jquery-3.4.1.min.js"></script>
 <script defer src="../assets/libs/swiper.min.js"></script>
 <script defer src="../assets/js/ui.js"></script>
