--- a/member/findpw.html
+++ b/member/findpw.html
@@ -100,20 +100,20 @@
     
     <!-- footer -->
     <footer class="footer">
-        <a href="#a" class="consult_call">
-            <span>전화 상담하기</span>
-        </a>
         <section class="inner">
-            <div class="link_list">
-                <a href="#a">개인정보취급방침</a>
-                <a href="#a">이용약관</a>
-                <a href="#a">회사소개</a>
+            <h2 class="logo"><img src="../assets/img/logo_foot.svg" alt="한우리 독서문화운동본부"></h2>
+            <div class="foot_cont">
+                <div class="link_list">
+                    <a href="#a">개인정보취급방침</a>
+                    <a href="#a">이용약관</a>
+                    <a href="#a">회사소개</a>
+                </div>
+                <p class="address">
+                    07261 서울시 영등포구 당산로27길 16 한우리빌딩 2층 <br class="m">
+                    대표 김희선  /  사업자등록 220-82-00385  /  02-6276-2604
+                </p>
+                <p class="copyright">@ (사)한우리독서문화운동본부</p>
             </div>
-            <p class="address">
-                07261 서울시 영등포구 당산로27길 16 한우리빌딩 2층 <br class="m">
-                대표 김희선  /  사업자등록 220-82-00385  /  02-6276-2604
-            </p>
-            <p class="copyright">@ (사)한우리독서문화운동본부</p>
         </section>        
     </footer>
     <!--// footer -->
