--- a/member/create.html
+++ b/member/create.html
@@ -87,7 +87,7 @@
                 <a href="#a" class="active">회원가입</a>
             </div>
             <div class="form_wrap">
-                <p class="txt">∙ 한우리 교사는 <a href="#a" class="_link">교사 정보</a>로 가입해 주세요.</p>
+                <p class="txt">한우리 교사는 <a href="#a" class="_link">교사 정보</a>로 가입해 주세요.</p>
                 <div class="input_wrap">
                     <input type="text" class="text ico_user" placeholder="교사·학부모 이름 입력">
                     <input type="text" class="text ico_id" placeholder="아이디 입력">
@@ -116,6 +116,9 @@
     
     <!-- footer -->
     <footer class="footer">
+        <a href="#a" class="consult_call">
+            <span>전화 상담하기</span>
+        </a>
         <section class="inner">
             <h2 class="logo"><img src="../assets/img/logo_foot.svg" alt="한우리 독서문화운동본부"></h2>
             <div class="foot_cont">
