--- a/member/findid.html
+++ b/member/findid.html
@@ -99,6 +99,9 @@
     
     <!-- footer -->
     <footer class="footer">
+        <a href="#a" class="consult_call">
+            <span>전화 상담하기</span>
+        </a>
         <section class="inner">
             <h2 class="logo"><img src="../assets/img/logo_foot.svg" alt="한우리 독서문화운동본부"></h2>
             <div class="foot_cont">
