--- a/member/login.html
+++ b/member/login.html
@@ -87,10 +87,10 @@
                 <a href="#a">회원가입</a>
             </div>
             <div class="form_wrap">
-                <p class="txt">∙ 올해 시험접수가 처음이라면 회원가입을 먼저 하세요.</p>
+                <p class="txt">올해 시험접수가 처음이라면 회원가입을 먼저 하세요.</p>
                 <div class="input_wrap">
                     <input type="text" class="text error ico_id" placeholder="아이디 입력">
-                    <p class="error_txt">∙ 등록되지 않은 아이디입니다.</p>
+                    <p class="error_txt">등록되지 않은 아이디입니다.</p>
                     <input type="password" class="text ico_pw" placeholder="영문, 숫자 포함 6자리 이상 비밀번호 입력">
                 </div>
                 <button class="btn_submit puple"><span>로그인</span></button>
@@ -101,6 +101,9 @@
     
     <!-- footer -->
     <footer class="footer">
+        <a href="#a" class="consult_call">
+            <span>전화 상담하기</span>
+        </a>
         <section class="inner">
             <h2 class="logo"><img src="../assets/img/logo_foot.svg" alt="한우리 독서문화운동본부"></h2>
             <div class="foot_cont">
