--- a/work.html
+++ b/work.html
@@ -137,35 +137,35 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>도서구입</td>
 					<td>구입안내</td>
 					<td><a href="book/book.html" target="_blank">book/book.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-15</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m04">
 					<td></td>
 					<td>도서구입</td>
 					<td><a href="book/books1.html" target="_blank">book/books1.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-15</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m04">
 					<td></td>
 					<td>주문확인</td>
 					<td><a href="book/books2.html" target="_blank">book/books2.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-15</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m04">
 					<td></td>
 					<td>주문수정</td>
 					<td><a href="" target="_blank">book/books3.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-15</td>
 					<td class="ac">book1복사 별도 퍼블리싱 불필요</td>
 				</tr>
 				<tr class="m04">
 					<td></td>
 					<td>구입완료</td>
 					<td><a href="book/books4.html" target="_blank">book/books4.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-15</td>
 					<td class="ac"></td>
 				</tr>
 				<!-- 시험접수 -->
