--- a/member/login.html
+++ b/member/login.html
@@ -71,8 +71,7 @@
                         <a href="#a">도서주문조회</a>
                         <a href="#a">접수확인</a>
                         <a href="#a">응시표</a>
-                        <a href="#a">시험환불</a>
-                        <a href="#a">결과</a>
+                        <a href="#a">시험환불</a>                        
                     </div>
                 </li>
             </ul>
@@ -90,7 +89,7 @@
                 <p class="txt">올해 시험접수가 처음이라면 회원가입을 먼저 하세요.</p>
                 <div class="input_wrap">
                     <input type="text" class="text error ico_id" placeholder="아이디 입력">
-                    <p class="error_txt">등록되지 않은 아이디입니다.</p>
+                    <!-- <p class="error_txt">등록되지 않은 아이디입니다.</p> -->
                     <input type="password" class="text ico_pw" placeholder="영문, 숫자 포함 6자리 이상 비밀번호 입력">
                 </div>
                 <button class="btn_submit puple"><span>로그인</span></button>
