--- a/book/book.html
+++ b/book/book.html
@@ -95,7 +95,7 @@
                     <a href="#a" class="btn_app puple">
                         <span class="right">도서구입 6.7(화) ~ 7.29(금)</span>
                     </a>
-                    <a href="#a" class="btn_app orange">
+                    <a href="#a" class="btn_app orange pc_f">
                         <span class="right">시험접수 6.13(월) ~ 7.15(금)</span>
                     </a>
                 </div>
@@ -133,69 +133,124 @@
             <div class="competition_must">
                 <h2>2022년 대회 필독서</h2>
                 <div class="btn_box">
-                    <button type="button"><span>초등 1학년부</span></button>
-                    <button type="button"><span>초등 2학년부</span></button>
-                    <button type="button"><span>초등 3학년부</span></button>
-                    <button type="button"><span>초등 4학년부</span></button>
-                    <button type="button"><span>초등 5학년부</span></button>
-                    <button type="button"><span>초등 6학년부</span></button>
-                    <button type="button"><span>중학생부</span></button>
+                    <button data-rel="y1" type="button"><span>초등 1학년부</span></button>
+                    <button data-rel="y2" type="button"><span>초등 2학년부</span></button>
+                    <button data-rel="y3" type="button"><span>초등 3학년부</span></button>
+                    <button data-rel="y4" type="button"><span>초등 4학년부</span></button>
+                    <button data-rel="y5" type="button"><span>초등 5학년부</span></button>
+                    <button data-rel="y6" type="button"><span>초등 6학년부</span></button>
+                    <button data-rel="y7" type="button"><span>중학생부</span></button>
                 </div>
             </div>
-
-            <div class="school_year_wrap">
-                <h2>초등 1학년부 필독서</h2>
-                <div class="book_list_box">
-                    <div class="tit_box">
-                        <h3>4권 세트 할인가</h3>
-                        <span class="org_price">44,000원</span>
-                        <b class="discount_price">40,440원</b>
+            <div class="school_year_wrap_container">
+                <div id="y1" class="school_year_wrap">
+                    <h2>초등 1학년부 필독서</h2>
+                    <div class="book_list_box">
+                        <div class="tit_box">
+                            <h3>4권 세트 할인가</h3>
+                            <span class="org_price">44,000원</span>
+                            <b class="discount_price">40,440원</b>
+                        </div>
+                        <div class="scroll_box noscroll">
+                            <ul>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book01@x2.png 2x,
+                                        ../assets/img/book/img_must_book01@x2.png 3x" src="../assets/img/book/img_must_book01@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">동동이 실종 사건 <span>사계절</span></p>
+                                        <p class="t2"><span>정가</span> 7,800원</p>
+                                        <p class="t3">잃어버린 물건을 찾아주고 착한 어린이 상을 받고 싶은 다홍이. 이런 친구 다홍이를 위해 반려견 동동이는 사라지기로 결심하는데...</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book02@x2.png 2x,
+                                                                    ../assets/img/book/img_must_book02@x2.png 3x"
+                                        src="../assets/img/book/img_must_book02@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">빌리와 시끄러운 바다 <span>스푼북</span></p>
+                                        <p class="t2"><span>정가</span> 12,000원</p>
+                                        <p class="t3">파도를 좋아하는 돌고래 빌리의 이야기. 빌리의 시선에서 하루하루 변하는 파도의 모습은 과연 어떠할까요?</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book03@x2.png 2x,
+                                                                    ../assets/img/book/img_must_book03@x2.png 3x"
+                                        src="../assets/img/book/img_must_book03@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">앵거 게임 <span>씨드북</span></p>
+                                        <p class="t2"><span>정가</span> 13,000원</p>
+                                        <p class="t3">‘화’라는 감정을 건강한 방식으로 표현 할 수 있도록 어린이들이 공감할 만한 상황을 유쾌하게 풀어내고 있습니다.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book04@x2.png 2x,
+                                                                    ../assets/img/book/img_must_book04@x2.png 3x"
+                                        src="../assets/img/book/img_must_book04@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">케인, 오늘도 잘 부탁해! 두줄 제목 <span>고래이야기</span></p>
+                                        <p class="t2"><span>정가</span> 12,000원</p>
+                                        <p class="t3">시각을 잃어가며 두려움과 부끄러운 감정들이 마음에 맴돌지만 이 모든 것을 이겨내고 소녀는 자신의 장애를 드러내는 흰지팡이 케인을 친구로 받아들입니다.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="scroll_box noscroll">
-                        <ul>
-                            <li>
-                                <img srcset="../assets/img/book/img_must_book01@x2.png 2x,
-                                    ../assets/img/book/img_must_book01@x2.png 3x" src="../assets/img/book/img_must_book01@x2.png" alt="">
-                                <div class="text_box">
-                                    <p class="t1">동동이 실종 사건 <span>사계절</span></p>
-                                    <p class="t2"><span>정가</span> 7,800원</p>
-                                    <p class="t3">잃어버린 물건을 찾아주고 착한 어린이 상을 받고 싶은 다홍이. 이런 친구 다홍이를 위해 반려견 동동이는 사라지기로 결심하는데...</p>
-                                </div>
-                            </li>
-                            <li>
-                                <img srcset="../assets/img/book/img_must_book02@x2.png 2x,
-                                                                ../assets/img/book/img_must_book02@x2.png 3x"
-                                    src="../assets/img/book/img_must_book02@x2.png" alt="">
-                                <div class="text_box">
-                                    <p class="t1">빌리와 시끄러운 바다 <span>스푼북</span></p>
-                                    <p class="t2"><span>정가</span> 12,000원</p>
-                                    <p class="t3">파도를 좋아하는 돌고래 빌리의 이야기. 빌리의 시선에서 하루하루 변하는 파도의 모습은 과연 어떠할까요?</p>
-                                </div>
-                            </li>
-                            <li>
-                                <img srcset="../assets/img/book/img_must_book03@x2.png 2x,
-                                                                ../assets/img/book/img_must_book03@x2.png 3x"
-                                    src="../assets/img/book/img_must_book03@x2.png" alt="">
-                                <div class="text_box">
-                                    <p class="t1">앵거 게임 <span>씨드북</span></p>
-                                    <p class="t2"><span>정가</span> 13,000원</p>
-                                    <p class="t3">‘화’라는 감정을 건강한 방식으로 표현 할 수 있도록 어린이들이 공감할 만한 상황을 유쾌하게 풀어내고 있습니다.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <img srcset="../assets/img/book/img_must_book04@x2.png 2x,
-                                                                ../assets/img/book/img_must_book04@x2.png 3x"
-                                    src="../assets/img/book/img_must_book04@x2.png" alt="">
-                                <div class="text_box">
-                                    <p class="t1">케인, 오늘도 잘 부탁해! 두줄 제목 <span>고래이야기</span></p>
-                                    <p class="t2"><span>정가</span> 12,000원</p>
-                                    <p class="t3">시각을 잃어가며 두려움과 부끄러운 감정들이 마음에 맴돌지만 이 모든 것을 이겨내고 소녀는 자신의 장애를 드러내는 흰지팡이 케인을 친구로 받아들입니다.</p>
-                                </div>
-                            </li>
-                        </ul>
+                </div>
+                <div id="y2" class="school_year_wrap">
+                    <h2>초등 2학년부 필독서</h2>
+                    <div class="book_list_box">
+                        <div class="tit_box">
+                            <h3>4권 세트 할인가</h3>
+                            <span class="org_price">44,000원</span>
+                            <b class="discount_price">40,440원</b>
+                        </div>
+                        <div class="scroll_box noscroll">
+                            <ul>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book02@x2.png 2x,
+                                        ../assets/img/book/img_must_book02@x2.png 3x" src="../assets/img/book/img_must_book02@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">동동이 실종 사건 <span>사계절</span></p>
+                                        <p class="t2"><span>정가</span> 7,800원</p>
+                                        <p class="t3">잃어버린 물건을 찾아주고 착한 어린이 상을 받고 싶은 다홍이. 이런 친구 다홍이를 위해 반려견 동동이는 사라지기로 결심하는데...</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book01@x2.png 2x,
+                                                                    ../assets/img/book/img_must_book01@x2.png 3x"
+                                        src="../assets/img/book/img_must_book01@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">빌리와 시끄러운 바다 <span>스푼북</span></p>
+                                        <p class="t2"><span>정가</span> 12,000원</p>
+                                        <p class="t3">파도를 좋아하는 돌고래 빌리의 이야기. 빌리의 시선에서 하루하루 변하는 파도의 모습은 과연 어떠할까요?</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book03@x2.png 2x,
+                                                                    ../assets/img/book/img_must_book03@x2.png 3x"
+                                        src="../assets/img/book/img_must_book03@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">앵거 게임 <span>씨드북</span></p>
+                                        <p class="t2"><span>정가</span> 13,000원</p>
+                                        <p class="t3">‘화’라는 감정을 건강한 방식으로 표현 할 수 있도록 어린이들이 공감할 만한 상황을 유쾌하게 풀어내고 있습니다.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img srcset="../assets/img/book/img_must_book04@x2.png 2x,
+                                                                    ../assets/img/book/img_must_book04@x2.png 3x"
+                                        src="../assets/img/book/img_must_book04@x2.png" alt="">
+                                    <div class="text_box">
+                                        <p class="t1">케인, 오늘도 잘 부탁해! 두줄 제목 <span>고래이야기</span></p>
+                                        <p class="t2"><span>정가</span> 12,000원</p>
+                                        <p class="t3">시각을 잃어가며 두려움과 부끄러운 감정들이 마음에 맴돌지만 이 모든 것을 이겨내고 소녀는 자신의 장애를 드러내는 흰지팡이 케인을 친구로 받아들입니다.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
+            
 
             <a href="#a" class="btn_app puple">
                 <span class="right">도서구입 6.7(화) ~ 7.29(금)</span>
