--- a/member/login.html
+++ b/member/login.html
@@ -90,6 +90,7 @@
                 <div class="input_wrap">
                     <input type="text" class="text error ico_id" placeholder="아이디 입력">
                     <!-- <p class="error_txt">등록되지 않은 아이디입니다.</p> -->
+                    <span></span>
                     <input type="password" class="text ico_pw" placeholder="영문, 숫자 포함 6자리 이상 비밀번호 입력">
                 </div>
                 <button class="btn_submit puple"><span>로그인</span></button>
