--- a/work.html
+++ b/work.html
@@ -173,35 +173,35 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>시험접수</td>
 					<td>접수안내</td>
 					<td><a href="app/app.html" target="_blank">app/app.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-20</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m05">
 					<td></td>
 					<td>시험접수</td>
 					<td><a href="app/apps1.html" target="_blank">app/apps1.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-20</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m05">
 					<td></td>
 					<td>접수확인</td>
 					<td><a href="app/apps2.html" target="_blank">app/apps2.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-20<</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m05">
 					<td></td>
 					<td>접수정보 수정</td>
 					<td><a href="" target="_blank">app/apps3.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-20<</td>
 					<td class="ac">apps1 복사 / 별도 퍼블리싱 불필요</td>
 				</tr>
 				<tr class="m05">
 					<td></td>
 					<td>접수완료</td>
 					<td><a href="app/apps4.html" target="_blank">app/apps4.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-02-20<</td>
 					<td class="ac"></td>
 				</tr>
 				<!-- result-->
