--- a/work.html
+++ b/work.html
@@ -187,21 +187,21 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td></td>
 					<td>접수확인</td>
 					<td><a href="app/apps2.html" target="_blank">app/apps2.html</a></td>
-					<td class="ac">2022-02-20<</td>
+					<td class="ac">2022-02-20</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m05">
 					<td></td>
 					<td>접수정보 수정</td>
 					<td><a href="" target="_blank">app/apps3.html</a></td>
-					<td class="ac">2022-02-20<</td>
+					<td class="ac">2022-02-20</td>
 					<td class="ac">apps1 복사 / 별도 퍼블리싱 불필요</td>
 				</tr>
 				<tr class="m05">
 					<td></td>
 					<td>접수완료</td>
 					<td><a href="app/apps4.html" target="_blank">app/apps4.html</a></td>
-					<td class="ac">2022-02-20<</td>
+					<td class="ac">2022-02-20</td>
 					<td class="ac"></td>
 				</tr>
 				<!-- result-->
