--- a/app/apps3.html
+++ b/app/apps3.html
@@ -90,8 +90,8 @@
                     <ul>
                         <li>
                             <b>구분</b>
-                            <div>
-                                <button class="btn_cate">한우리교사</button>
+                            <div class="category_wrap">
+                                <button class="btn_cate" onclick="popOpen('#certificationLayer');">한우리교사</button>
                                 <button class="btn_cate">일반 개인</button>
                                 <button class="btn_cate">일반 단체</button>
                             </div>
@@ -107,7 +107,7 @@
                             <b>관계</b>
                             <div>
                                 <span>응시자의</span>
-                                <div>
+                                <div class="category_wrap">
                                     <button class="btn_cate">교사</button>
                                     <button class="btn_cate">부</button>
                                     <button class="btn_cate">모</button>
@@ -154,7 +154,7 @@
                         <li>
                             <b>학교명</b>
                             <div>
-                                <input type="text" value="서울대학교 사범대학교 여자중학교">
+                                <input type="text" value="서울대학교 사범대학교 여자중학교" onclick="popOpen('#searchSchoolLayer');">
                             </div>
                         </li>
                         <li>
@@ -281,6 +281,65 @@
     <button id="btnClosed" class="btn __closed"></button>
 </aside>
 <!--// side nav -->
+
+<!-- 한우리 교사 인증 팝업 -->
+<aside class="layer_pop certification" id="certificationLayer">
+    <p class="tit">한우리교사 인증</p>
+    <button class="btn_closed" onclick="closePop('#certificationLayer');"></button>
+    <div class="inner">
+        <p class="t1">교사의 소속 지역센터 확인을 위해 정보를 입력해 주세요.</p>
+        <ul class="input_form">
+            <li>
+                <b>에듀넷 아이디</b>
+                <input type="text" value="myedu22">
+            </li>
+            <li>
+                <b>이름</b>
+                <input type="text" value="한교사">
+            </li>
+            <li>
+                <b>휴대폰 번호</b>
+                <input type="text" value="" placeholder="숫자만 입력">
+            </li>
+        </ul>
+        <button class="btn_submit orange" type="button"><span>확인</span></button>
+    </div>
+</aside>
+<!--// 한우리 교사 인증 팝업 -->
+
+<!-- 학교 검색 팝업 -->
+<aside class="layer_pop search_school" id="searchSchoolLayer">
+    <p class="tit">학교 검색</p>
+    <button class="btn_closed" onclick="closePop('#searchSchoolLayer');"></button>
+    <div class="input_wrap">
+        <input type="text" placeholder="학교명 입력">
+    </div>
+    <div class="select_list">
+        <div>
+            <b>KIS 제주캠퍼스</b> - 서귀포시 대정읍 글로벌에듀로 260번길 34
+        </div>
+        <div>
+            <b>노스런던컬리지게이트스쿨 제주</b> - 서귀포시 대정읍 구억리
+        </div>
+        <div>
+            <b>노스런던컬리지에잇스쿨 제주</b> - 서귀포시 대정읍 구억리 산1-6
+        </div>
+        <div>
+            <b>신제주초등학교</b> - 제주시 비월길 29
+        </div>
+        <div>
+            <b>제주대학교교육대학부설초등학교</b> - 제주시 일주동로 61
+        </div>
+    </div>
+    <div class="input_wrap direct">
+        <b>직접입력</b>
+        <input type="text" placeholder="검색이 안될 경우 입력">
+        <button type="button">확인</button>
+    </div>
+    
+</aside>
+<!--// 학교 검색 팝업 -->
+
 <script defer src="../assets/js/jquery-3.4.1.min.js"></script>
 <script defer src="../assets/libs/swiper.min.js"></script>
 <script defer src="../assets/js/ui.js"></script>
