apps1 script 추가

--- a/app/apps1.html
+++ b/app/apps1.html
@@ -173,7 +173,7 @@
                         <li>
                             <b>학교명</b>
                             <div>
-                                <input type="text" placeholder="클릭하여 검색">
+                                <input type="text" placeholder="클릭하여 검색" onclick="popOpen('#searchSchoolLayer');">
                             </div>
                         </li>
                         <li>
